# algoritmos-con-c-y-cpp

./: .gitignore  CMakeLists.txt  README.md
2021_edicion-1/: README.md
2021_edicion-1/clase-1/: README.md
2021_edicion-1/clase-2/: README.md  ejercicio-1.c  ejercicio-2.c  ejercicio-3.c  ejercicio-4.c  ejercicio-5.c  ejercicio-6.c  ejercicio-7.c  ejercicio-8.c  ejercicio-9.c
2021_edicion-1/clase-3/: README.md
2021_edicion-1/clase-4/: README.md  ejercicio-1.c  ejercicio-2.c  ejercicio-3.c
2021_edicion-1/clase-4/libreria/: pcn.c  pcn.h
2021_edicion-1/clase-5/: README.md  ejercicio1-solucion-propuesta.cpp  ejercicio1.cpp
2021_edicion-1/clase-5/libreria/: pcn.cpp  pcn.h
