cmake_minimum_required(VERSION 3.19)
project(algoritmos_con_c_y_cpp C)

set(CMAKE_C_STANDARD 11)

add_executable(2021_edicion-1_clase-2_ejercicio-1 2021_edicion-1/clase-2/ejercicio-1.c)
add_executable(2021_edicion-1_clase-2_ejercicio-2 2021_edicion-1/clase-2/ejercicio-2.c)
add_executable(2021_edicion-1_clase-2_ejercicio-3 2021_edicion-1/clase-2/ejercicio-3.c)
add_executable(2021_edicion-1_clase-2_ejercicio-4 2021_edicion-1/clase-2/ejercicio-4.c)
add_executable(2021_edicion-1_clase-2_ejercicio-5 2021_edicion-1/clase-2/ejercicio-5.c)
add_executable(2021_edicion-1_clase-2_ejercicio-6 2021_edicion-1/clase-2/ejercicio-6.c)
add_executable(2021_edicion-1_clase-2_ejercicio-7 2021_edicion-1/clase-2/ejercicio-7.c)
add_executable(2021_edicion-1_clase-2_ejercicio-8 2021_edicion-1/clase-2/ejercicio-8.c)
add_executable(2021_edicion-1_clase-2_ejercicio-9 2021_edicion-1/clase-2/ejercicio-9.c)
